# LatLonCover

./: .gitignore  LatLonConv.ipynb  LatLonConv.py  LatLonFun.ipynb  MANIFEST.in  README.md  outputDataDictionary.txt  paper.md  requirements.txt  setup.cfg  setup.py  someCoordinates.csv
.github/workflows/: publish-to-test-pypi.yml  run-tests.yml
cropScapeDemoImages/: demoCoordinates_LatLonCover.csv
cropScapeDocumentation/: 2022_CDL_Histogram_Summary.xlsx  CDL_codes_names_colors.xlsx  CDL_subcategories.csv  CDL_subcategories.xlsx  CDL_subcategories_legendCrse.csv  CDL_subcategories_legendFine.csv  notesFromWebsites.txt  rmWhiteSpFromSubClassFiles.R
src/cover/: LatLonConv.py  __init__.py  classify.py  main.py
src/cover/tests/: test_LatLonConv.py  test_classify.py
src/latloncover/: CDL_subcategories.csv  LatLonConv.py  __init__.py  classify.py  main.py
src/latloncover/tests/: test_LatLonConv.py  test_classify.py
