[metadata]
name = latloncover
url = https://github.com/Imageomics/LatLonCover
author = John Bradley
author_email = john.bradley@duke.edu
version = 0.1.0

[options]
install_requires =
    requests==2.31.0
    click==8.1.6
    pandas==2.0.3
    geopandas==0.13.2
package_dir=
    =src
packages=find:
include_package_data = True

[options.packages.find]
where=src

[options.entry_points]
console_scripts =
    latloncover = latloncover.main:main
